fixed zooming to inputs on ios

--- a/src/components/settings/Settings.scss
+++ b/src/components/settings/Settings.scss
@@ -99,3 +99,9 @@ select {
   gap: 10px;
   margin-top: 20px;
 }
+
+@media (max-width: 480px) {
+  input, select {
+    font-size: 16px;
+  }
+}
